--- a/web-design-example/codepen-example-1/style.css
+++ b/web-design-example/codepen-example-1/style.css
@@ -11,6 +11,7 @@ html {
   font-family: "Roboto", sans-serif;
   font-size: 62.5%;
 }
+
 @media only screen and (max-width: 800px) {
   html {
     font-size: 57%;
@@ -22,6 +23,7 @@ body {
   color: #fff;
   padding: 8rem;
 }
+
 @media only screen and (max-width: 1000px) {
   body {
     padding: 0;
@@ -33,6 +35,7 @@ body {
   overflow: hidden;
   border-radius: 5rem;
 }
+
 @media only screen and (max-width: 1000px) {
   .container {
     border-radius: 0;
@@ -46,11 +49,13 @@ body {
   transition: all 0.25s ease-in;
   transform: translateX(0);
 }
+
 @media only screen and (max-width: 1000px) {
   .slider {
     height: 100vh;
   }
 }
+
 .slider .box {
   height: 100%;
   width: 100%;
@@ -60,12 +65,14 @@ body {
   overflow: hidden;
   position: relative;
 }
+
 @media only screen and (max-width: 650px) {
   .slider .box {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2, 1fr);
   }
 }
+
 .slider .box .bg {
   padding: 2rem;
   background-color: rgba(0, 0, 0, 0.2);
@@ -77,11 +84,13 @@ body {
   padding-left: 20rem;
   transform-origin: 0 100%;
 }
+
 @media only screen and (max-width: 800px) {
   .slider .box .bg {
     width: 65%;
   }
 }
+
 @media only screen and (max-width: 650px) {
   .slider .box .bg {
     width: 100%;
@@ -91,6 +100,7 @@ body {
     transform: skewX(0deg);
   }
 }
+
 .slider .box .bg::before {
   content: "";
   width: 100%;
@@ -102,6 +112,7 @@ body {
   pointer-events: none;
   transform: skewX(10deg);
 }
+
 @media only screen and (max-width: 650px) {
   .slider .box .bg::before {
     width: 120%;
@@ -109,6 +120,7 @@ body {
     transform: skewX(0deg);
   }
 }
+
 .slider .box .details {
   padding: 5rem;
   padding-left: 10rem;
@@ -116,6 +128,7 @@ body {
   grid-column: 1/span 1;
   grid-row: 1/-1;
 }
+
 @media only screen and (max-width: 650px) {
   .slider .box .details {
     grid-row: 2/span 1;
@@ -125,11 +138,13 @@ body {
     transform: translateY(-9rem);
   }
 }
+
 .slider .box .details h1 {
   font-size: 3.5rem;
   font-weight: 500;
   margin-bottom: 0.5rem;
 }
+
 .slider .box .details p {
   display: inline-block;
   font-size: 1.3rem;
@@ -137,11 +152,13 @@ body {
   margin-bottom: 2rem;
   margin-right: 5rem;
 }
+
 @media only screen and (max-width: 800px) {
   .slider .box .details p {
     margin-right: 0;
   }
 }
+
 .slider .box .details button {
   padding: 1rem 3rem;
   color: #fff;
@@ -151,78 +168,107 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
 }
+
 .slider .box .details button:hover {
   opacity: 0.8;
 }
+
 .slider .box .details button:focus {
   outline: none;
   border: none;
 }
+
 .slider .box1 {
   background-color: #500033;
 }
+
 .slider .box1 .illustration .inner {
   background-color: #FF0077;
 }
-.slider .box1 .illustration .inner::after, .slider .box1 .illustration .inner::before {
+
+.slider .box1 .illustration .inner::after,
+.slider .box1 .illustration .inner::before {
   background-color: rgba(255, 0, 119, 0.4);
 }
+
 .slider .box1 button {
   background-color: #FF0077;
 }
+
 .slider .box2 {
   background-color: #000050;
 }
+
 .slider .box2 .illustration .inner {
   background-color: #0033FF;
 }
-.slider .box2 .illustration .inner::after, .slider .box2 .illustration .inner::before {
+
+.slider .box2 .illustration .inner::after,
+.slider .box2 .illustration .inner::before {
   background-color: rgba(0, 51, 255, 0.4);
 }
+
 .slider .box2 button {
   background-color: #0033FF;
 }
+
 .slider .box3 {
   background-color: #00501D;
 }
+
 .slider .box3 .illustration .inner {
   background-color: #00FF44;
 }
-.slider .box3 .illustration .inner::after, .slider .box3 .illustration .inner::before {
+
+.slider .box3 .illustration .inner::after,
+.slider .box3 .illustration .inner::before {
   background-color: rgba(0, 255, 68, 0.4);
 }
+
 .slider .box3 button {
   background-color: #00FF44;
 }
+
 .slider .box4 {
   background-color: #554D00;
 }
+
 .slider .box4 .illustration .inner {
   background-color: #FF4E00;
 }
-.slider .box4 .illustration .inner::after, .slider .box4 .illustration .inner::before {
+
+.slider .box4 .illustration .inner::after,
+.slider .box4 .illustration .inner::before {
   background-color: rgba(255, 78, 0, 0.4);
 }
+
 .slider .box4 button {
   background-color: #FF4E00;
 }
+
 .slider .box5 {
   background-color: #300050;
 }
+
 .slider .box5 .illustration .inner {
   background-color: #8000FF;
 }
-.slider .box5 .illustration .inner::after, .slider .box5 .illustration .inner::before {
+
+.slider .box5 .illustration .inner::after,
+.slider .box5 .illustration .inner::before {
   background-color: rgba(128, 0, 255, 0.4);
 }
+
 .slider .box5 button {
   background-color: #8000FF;
 }
+
 .slider .illustration {
   grid-column: 2/-1;
   grid-row: 1/-1;
   justify-self: center;
 }
+
 @media only screen and (max-width: 650px) {
   .slider .illustration {
     grid-row: 1/span 1;
@@ -232,6 +278,7 @@ body {
     align-items: center;
   }
 }
+
 .slider .illustration div {
   height: 25rem;
   width: 18rem;
@@ -240,13 +287,16 @@ body {
   position: relative;
   transform: skewX(-10deg);
 }
+
 @media only screen and (max-width: 800px) {
   .slider .illustration div {
     height: 20rem;
     width: 15rem;
   }
 }
-.slider .illustration div::after, .slider .illustration div::before {
+
+.slider .illustration div::after,
+.slider .illustration div::before {
   content: "";
   position: absolute;
   height: 100%;
@@ -255,9 +305,11 @@ body {
   top: 0;
   left: 0;
 }
+
 .slider .illustration div::after {
   transform: translate(4rem, -1rem);
 }
+
 .slider .illustration div::before {
   transform: translate(2rem, -2rem);
 }
@@ -276,12 +328,15 @@ body {
   opacity: 0.2;
   transition: all 0.3s ease;
 }
+
 @media only screen and (max-width: 650px) {
+
   .prev,
-.next {
+  .next {
     display: none;
   }
 }
+
 .prev:hover,
 .next:hover {
   opacity: 1;
@@ -310,12 +365,14 @@ body {
   text-align: center;
   font-size: 1.5rem;
 }
+
 @media only screen and (max-width: 650px) {
   .trail {
     width: 90%;
     bottom: 13%;
   }
 }
+
 .trail div {
   padding: 2rem;
   border-top: 3px solid #fff;
@@ -323,9 +380,11 @@ body {
   opacity: 0.3;
   transition: all 0.3s ease;
 }
+
 .trail div:hover {
   opacity: 0.6;
 }
+
 @media only screen and (max-width: 650px) {
   .trail div {
     padding: 1rem;
